# peridot-contracts-2-5

./: .gitignore  package.json
.eliza/: .gitignore
contracts/: .gitignore  CHAINLINK_INTEGRATION_PLAN.md  README.md  (+13 more)
icp-chain-fusion/: .gitignore  Cargo.toml  ENHANCED_DEPLOYMENT_GUIDE.md  NEXT_STEPS_ROADMAP.md  README.md  cross_chain_demo.sh  deploy.sh  dfx.json  env.example  initArgument.did
icp-chain-fusion/.dfx/local/: canister_ids.json  wallets.json
icp-chain-fusion/.dfx/local/canisters/evm_rpc/: constructor.did
icp-chain-fusion/.dfx/local/canisters/peridot_monitor/: constructor.did  constructor.old.did  peridot_monitor.wasm  service.did.d.ts  service.did.js
icp-chain-fusion/.dfx/local/lsp/: 7hfb6-caaaa-aaaar-qadga-cai.did  uxrrr-q7777-77774-qaaaq-cai.did
icp-chain-fusion/.dfx/network/local/: network-id  replica-effective-config.json
icp-chain-fusion/.dfx/network/local/state/replicated_state/: registry.proto  topology.json
icp-chain-fusion/.dfx/network/local/state/replicated_state/17ee969f4d56997f3cb9c0221c0f3f903d631a7c1a552782824808c315d8356a/: states_metadata.pbuf
icp-chain-fusion/.dfx/playground/: canister_ids.json  canister_timestamps.json
icp-chain-fusion/.dfx/playground/canisters/peridot_monitor/: index.js  peridot_monitor.wasm  service.did.d.ts  service.did.js
icp-chain-fusion/src/peridot_monitor/: Cargo.toml  peridot_monitor.did
icp-chain-fusion/src/peridot_monitor/src/: chain_fusion_manager.rs  cross_chain_transactions.rs  enhanced_api.rs  event_monitor.rs  guard.rs  job.rs  lib.rs  lifecycle.rs  logs.rs  rpc_manager.rs  state.rs
(+162 files in other folders)
