[package]
name = "peridot_monitor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true }
getrandom = { workspace = true }
evm-rpc-canister-types = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
num-traits = { workspace = true }
minicbor = { workspace = true }
minicbor-derive = { workspace = true }
serde_bytes = { workspace = true } 